Set overflow-x:hidden on #map, not body, which fixes the overflow in Safari.

--- a/app/assets/stylesheets/read/map.less
+++ b/app/assets/stylesheets/read/map.less
@@ -8,6 +8,8 @@
   height: 100vh;
   width: 100vw;
 
+  overflow-x: hidden;
+
 }
 
 
